# Nerf-Turret

./: .gitignore  README.md  TODO.md
src/turret_bringup/: package.xml  setup.cfg  setup.py
src/turret_bringup/launch/: ros2_control.launch.py  turret_bringup.launch.py  turret_manual.launch.py
src/turret_controller/: CMakeLists.txt  package.xml  turret_controller.xml
src/turret_controller/include/turret_controller/: turret_controller.hpp
src/turret_controller/src/: turret_controller.cpp
src/turret_description/: CMakeLists.txt  package.xml
src/turret_description/urdf/: turret.urdf
src/turret_hardware/: CMakeLists.txt  package.xml  turret_hardware.xml
src/turret_hardware/config/: controllers.yaml
src/turret_hardware/include/turret_hardware/: turret_hardware.hpp  turret_real_hardware.hpp  turret_sim_hardware.hpp
src/turret_hardware/src/: turret_hardware.cpp  turret_real_hardware.cpp  turret_sim_hardware.cpp
src/turret_teleop/: package.xml  setup.cfg  setup.py
src/turret_teleop/turret_teleop/: turret_teleop_node.py
